[package]
name = "filer"
version = "0.1.0"
edition = "2021"
author = "AdrianGonz97"
description = "File management tool for renaming files in batches."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
path-clean = "0.1.0"
